--- a/src/main/resources/com/example/cursova/Palace.fxml
+++ b/src/main/resources/com/example/cursova/Palace.fxml
@@ -5,20 +5,20 @@
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 <?import javafx.scene.web.WebView?>
 
 <AnchorPane prefHeight="790.0" prefWidth="1550.0" style="-fx-background-color: BFD8AF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cursova.Palace">
     <children>
         <AnchorPane layoutY="93.0" prefHeight="700.0" prefWidth="1550.0" style="-fx-background-color: white;">
             <children>
-                <ImageView fitHeight="327.0" fitWidth="490.0" layoutX="39.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fx:id="imageView1" fitHeight="327.0" fitWidth="490.0" layoutX="41.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@img/Палац%20шенборнів.jpg" />
+                        <Image url="@../../../img/Палац%20шенборнів.jpg" />
                     </image>
                 </ImageView>
                 <TabPane layoutX="588.0" prefHeight="700.0" prefWidth="962.0" tabClosingPolicy="UNAVAILABLE">
@@ -27,21 +27,16 @@
                             <content>
                                 <AnchorPane prefHeight="200.0" prefWidth="200.0">
                                     <children>
-                                        <ImageView fitHeight="407.0" fitWidth="492.0" layoutX="36.0" layoutY="301.0" pickOnBounds="true" preserveRatio="true">
+                                        <ImageView fx:id="imageView2" fitHeight="306.0" fitWidth="456.0" layoutX="253.0" layoutY="343.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
-                                                <Image url="@img/Палац%20шенборнів_1.jpeg" />
+                                                <Image url="@../../../img/Палац%20шенборнів_1.jpeg" />
                                             </image>
                                         </ImageView>
-                                        <Text layoutX="25.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Легенда про замок розповідає про неймовірну ревність одного із Шенборнів до своєї дружини. Граф захоплювався полюванням, але думки про зраду коханої під час його відсутності не давали чоловікові спокою. Тому той завжди повертався додому з порожніми руками. Якось замучений чорними думками Шенборн зустрів у лісі ворожку. Та порадила йому розпрощатися із своїми підозрами. Графиня повинна була спуститися з небезпечних та стрімких Соколових скель. Якщо вона пройде шлях благополучно, значить - вірна, якщо зірветься, то зраджує. Дружина Шенборна благополучно спустилася зі скелі, але розлючена чоловіковою поведінкою залишила його назавжди. Після смерті графині її душа оселилася в замку і час від часу дає про себе чути. За словами відвідувачів, у старій частині замку живе привид чоловіка, щоправда він мирний та тихий. З вигляду дуже схожий на одного із Шенборнів, зображених на одній із картин, що висить в замку." wrappingWidth="911.7367706298828">
-                                            <font>
-                                                <Font name="Comic Sans MS" size="18.0" />
-                                            </font>
-                                        </Text>
-                                        <ImageView fitHeight="359.0" fitWidth="264.0" layoutX="599.0" layoutY="271.0" pickOnBounds="true" preserveRatio="true">
-                                            <image>
-                                                <Image url="@img/Палац%20Шенборнів_2.jpg" />
-                                            </image>
-                                        </ImageView>
+                              <TextArea fx:id="textArea" blendMode="HARD_LIGHT" layoutX="6.0" layoutY="25.0" maxWidth="934.0" minHeight="310.0" minWidth="933.0" prefHeight="310.0" prefWidth="934.0" style="-fx-focus-color: -fx-control-inner-background; -fx-text-fill: black; -fx-faint-focus-color: transparent;" wrapText="true">
+                                 <font>
+                                    <Font name="Comic Sans MS Bold" size="18.0" />
+                                 </font>
+                              </TextArea>
                                     </children>
                                 </AnchorPane>
                             </content>
@@ -50,12 +45,12 @@
                             <content>
                                 <AnchorPane prefHeight="200.0" prefWidth="200.0">
                                     <children>
-                                        <Text layoutX="29.0" layoutY="129.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Замок розташований не далеко від залізничної станції Карпати. Через неї проходять практично всі приміські поїзди, що йдуть через Мукачево. Так само до замку можна доїхати автобусом, оскільки по трасі вони регулярно курсують маршрутом Мукачево – Свалява. Автобусна зупинка знаходиться прямо біля вїзду на територію санаторію “Карпати”. Якщо Ви їдете на особистому автомобілі, то необхідно рухатися по трасі Київ – Чоп. Замок знаходиться між селом Сусково і смт. Чинадійово.&#10;&#10;На територію замку можна потрапити прямо з платформи, причому абсолютно безкоштовно. Якщо пройти через пост охорони доведеться заплатити символічну плату 20 грн." wrappingWidth="445.39630126953125">
-                                            <font>
-                                                <Font name="Comic Sans MS" size="18.0" />
-                                            </font>
-                                        </Text>
-                                        <WebView fx:id="webView" layoutX="492.0" layoutY="65.0" prefHeight="490.0" prefWidth="434.0" />
+                                        <WebView fx:id="webView" layoutX="492.0" layoutY="65.0" prefHeight="550.0" prefWidth="440.0" />
+                              <TextArea fx:id="textArea2" blendMode="HARD_LIGHT" layoutX="14.0" layoutY="97.0" maxWidth="482.0" minHeight="485.0" minWidth="475.0" prefHeight="485.0" prefWidth="475.0" style="-fx-background-color: white; -fx-border-color: white; -fx-focus-color: -fx-control-inner-background; -fx-faint-focus-color: transparent; -fx-text-fill: black; -fx-background: white;" wrapText="true">
+                                 <font>
+                                    <Font name="Comic Sans MS Bold" size="18.0" />
+                                 </font>
+                              </TextArea>
                                     </children></AnchorPane>
                             </content>
                         </Tab>
@@ -63,32 +58,32 @@
                             <content>
                                 <AnchorPane prefHeight="200.0" prefWidth="200.0">
                                     <children>
-                                        <ImageView fitHeight="301.0" fitWidth="539.0" layoutX="364.0" layoutY="55.0" pickOnBounds="true" preserveRatio="true">
+                                        <ImageView fx:id="imageView3" fitHeight="301.0" fitWidth="539.0" layoutX="473.0" layoutY="39.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
-                                                <Image url="@img/Палац%20Шенборнів_3.jpg" />
+                                                <Image url="@../../../img/Палац%20Шенборнів_2.jpg" />
                                             </image>
                                         </ImageView>
-                                        <Text layoutX="28.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1. Палац розташований в самісінькому центрі великого парку, загальною площею в 19 га. &#10;2. Берегвар оздоблений барельєфами на тему геральдичних символів роду Шенборнів, вітражами, флюгерами.&#10;3. Палац є пам’яткою архітектури національного значення." wrappingWidth="298.40012207031265">
-                                            <font>
-                                                <Font name="Comic Sans MS" size="18.0" />
-                                            </font>
-                                        </Text>
-                                        <Text layoutX="28.0" layoutY="390.0" strokeType="OUTSIDE" strokeWidth="0.0" text="4. Основна фішка замку в календарному принципі побудови: 12 входів, як місяців у році; 52 кімнати за кількістю тижнів; 365 вікон (+1 потаємне) та 4 вежі, як кількість пір року. На жаль, коли палац перетворився на санаторій, то “календар” зазнав змін – з’явився додатковий вхід, перепланували деякі кімнати й зменшилась кількість вікон.&#10;5. Навколо ще у ХІХ ст. заклали парк-дендрарій площею 19 га з рідкісними деревами та кущами.&#10;6. У 1945 р. замок націоналізували і він став санаторієм «Карпати» (кажуть, улюбленим місцем відпочинку генсека Микити Хрущова). Як санаторій функціонує і досі.&#10;7. Палац збудували у 1895 р. як мисливську резиденцію одного з найвідоміших австрійських родів – графів Шенборнів – на місці дерев’яного будинку для полювання." wrappingWidth="905.1771850585938">
-                                            <font>
-                                                <Font name="Comic Sans MS" size="18.0" />
-                                            </font>
-                                        </Text>
+                              <TextArea fx:id="textArea3" blendMode="HARD_LIGHT" layoutX="8.0" layoutY="34.0" maxWidth="456.0" minHeight="314.0" minWidth="440.0" prefHeight="320.0" prefWidth="456.0" style="-fx-background-color: white; -fx-border-color: white; -fx-focus-color: -fx-control-inner-background; -fx-faint-focus-color: transparent; -fx-text-fill: black; -fx-background: white;" wrapText="true">
+                                 <font>
+                                    <Font name="Comic Sans MS Bold" size="18.0" />
+                                 </font>
+                              </TextArea>
+                              <TextArea fx:id="textArea4" blendMode="HARD_LIGHT" layoutX="9.0" layoutY="365.0" maxWidth="934.0" minHeight="276.0" minWidth="924.0" prefHeight="286.0" prefWidth="934.0" style="-fx-background-color: white; -fx-border-color: white; -fx-focus-color: -fx-control-inner-background; -fx-faint-focus-color: transparent; -fx-text-fill: black; -fx-background: white;" wrapText="true">
+                                 <font>
+                                    <Font name="Comic Sans MS Bold" size="18.0" />
+                                 </font>
+                              </TextArea>
                                     </children></AnchorPane>
                             </content>
                         </Tab>
                     </tabs>
                 </TabPane>
-                <Separator layoutX="562.0" orientation="VERTICAL" prefHeight="700.0" prefWidth="22.0" />
-                <Text layoutX="39.0" layoutY="414.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Цей палац був побудований графом Ервіном Фрідріхом Шенборн-Бухгаймом у 1890—1895 роках. Сам мисливський замок побудований у неоромантичному стилі, що поєднує романські та готичні мотиви.&#10;&#10;Щоб дізнатись про нього більше обирай вкладку, яка тебе зацікавила -&gt;" wrappingWidth="490.0">
-                    <font>
-                        <Font name="Comic Sans MS" size="20.0" />
-                    </font>
-                </Text>
+                <Separator halignment="LEFT" layoutX="577.0" orientation="VERTICAL" prefHeight="700.0" prefWidth="22.0" />
+            <TextArea fx:id="textArea5" blendMode="HARD_LIGHT" layoutX="28.0" layoutY="392.0" maxWidth="515.0" minHeight="262.0" minWidth="515.0" prefHeight="262.0" prefWidth="515.0" style="-fx-background-color: white; -fx-border-color: white; -fx-focus-color: -fx-control-inner-background; -fx-faint-focus-color: transparent; -fx-text-fill: black; -fx-background: white;" wrapText="true">
+               <font>
+                  <Font name="Comic Sans MS Bold" size="18.0" />
+               </font>
+            </TextArea>
             </children>
         </AnchorPane>
         <Label layoutX="520.0" text="Палац Шенборнів" textFill="#294b29">
@@ -96,10 +91,15 @@
                 <Font name="Comic Sans MS" size="60.0" />
             </font>
         </Label>
-        <Button fx:id="Btn_return" layoutX="37.0" layoutY="23.0" mnemonicParsing="false" text="Повернутись">
+        <Button fx:id="Btn_return" layoutX="37.0" layoutY="31.0" mnemonicParsing="false" text="Повернутись">
             <font>
                 <Font name="Comic Sans MS" size="18.0" />
             </font>
         </Button>
+      <Button fx:id="saveButton" layoutX="1401.0" layoutY="31.0" mnemonicParsing="false" onAction="#saveButtonClicked" text="Зберегти">
+         <font>
+            <Font name="Comic Sans MS" size="18.0" />
+         </font>
+      </Button>
     </children>
 </AnchorPane>
